Feature/746-748-747 Implement Bulk Transfer Fulfil (#118)
* package-lock.json
* Fix issues with object store usage
* Additional changes to Object Store and Kafka config
* Add MONGODB.URI config
* Updated package.json
* Add license info
* Updated integration tests run config
* Init BulkProcessingHandler
* WIP #1
* message.id=uuid() during Transfer Prepare
* Removed kafkaConf.key
Switched to message.id=UUID for fulfil and get
28 unit tests fail
* Fixed unit tests
* Unifying mongo schema definitions
* Finilize ml-api-adapter, but unit tests hang
* Fix mongoose unique index issue
* Fixed integration tests: uriParams added
* Changes as per PR review comments
* Putting central-object-store library - wip
* Re-factored objStore lib to be re-usable between both ml-api and central-ledger
* Fixing issue with unit tests
* Fix standard issues
* Add mdebarros as contributor and remove unused code
* Removing local objectStoreLib
* package.json issues
* Fixed minor inconsistencies regarding the ObjStoreDb access across different apis
* Update swagger.yaml to accept and require a valid BulkTransfersIDPutResponse, fixed other issues as well
* Implement BulkTransfersByIDPut operation
* BulkFulfilHandler Draft Implementation
* Completed BulkTransferFulfil
* central-object-store 6.4.1-snapshot
* package.json update
* Fix integration tests issue
* Reset package.json cache
