# src/bulkApi/config/swagger.yaml
@@ -93,8 +93,8 @@ paths:
             type: string
           description: Successful
     put:
-      summary: Fulfil bulkTransfer
-      operationId: putBulkTransfersId
+      summary: BulkTransfersByIDPut
+      operationId: BulkTransfersByIDPut
       parameters:
         - type: string
           pattern: 'application\/vnd.interoperability[.]'
@@ -142,14 +142,14 @@ paths:
         - in: body
           name: body
           schema:
-            $ref: '#/definitions/BulkTransferFulfilment'
+            $ref: '#/definitions/BulkTransfersIDPutResponse'
       tags:
-        - bulk-transfers
+        - bulkTransfers
       responses:
         default:
           schema:
             type: string
-          description: Successful
+          description: The callback PUT /bulkTransfers/<ID> is used to inform the client of a requested or created bulk transfer. The <ID> in the URI should contain the bulkTransferId that was used for the creation of the bulk transfer (POST /bulkTransfers), or the <ID> that was used in the GET /bulkTransfers/<ID>.
   /bulkTransfers:
     post:
       summary: Transfer API.
@@ -205,7 +205,7 @@ paths:
         - in: body
           name: body
           schema:
-            $ref: '#/definitions/BulkTransfer'
+            $ref: '#/definitions/BulkTransfersPostRequest'
       tags:
         - bulk-transfers
       responses:
@@ -272,6 +272,7 @@ paths:
           schema:
             type: string
           description: Successful
+
 definitions:
   Amount:
     type: object
@@ -287,7 +288,7 @@ definitions:
     required:
       - currency
       - amount
-  extensionModel:
+  ExtensionModel:
     type: object
     properties:
       key:
@@ -303,19 +304,19 @@ definitions:
     required:
       - key
       - value
-  extension:
+  Extension:
     type: array
     description: extension
     minItems: 1
     maxItems: 16
     items:
-      $ref: '#/definitions/extensionModel'
-  extensionList:
+      $ref: '#/definitions/ExtensionModel'
+  ExtensionList:
     type: object
     description: Extension list
     properties:
       extension:
-        $ref: '#/definitions/extension'
+        $ref: '#/definitions/Extension'
     required:
       - extension
   IndividualTransfer:
@@ -342,39 +343,32 @@ definitions:
         x-convert:
           trim: true
       extensionList:
-        $ref: '#/definitions/extensionList'
+        $ref: '#/definitions/ExtensionList'
     required:
       - transferId
       - transferAmount
       - ilpPacket
       - condition
-  TransferFulfilment:
+  IndividualTransferResult:
+    title: IndividualTransferResult
     type: object
+    description: Data model for the complex type IndividualTransferResult.
     properties:
+      transferId:
+        type: string
+        description: Identifies messages related to the same /transfers sequence.
       fulfilment:
         type: string
-        description: fulfilment of the transfer
-        maxLength: 48
-        pattern: '^[A-Za-z0-9-_]{43}$'
-      completedTimestamp:
-        type: string
-        description: When the transfer was completed
-        pattern: >-
-          ^(?:[1-9]\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)T(?:[01]\d|2[0-3]):[0-5]\d:[0-5]\d(?:(\.\d{3}))(?:Z|[+-][01]\d:[0-5]\d)$
-      transferState:
-        type: string
-        description: State of the transfer
-        enum:
-          - RECEIVED
-          - RESERVED
-          - COMMITTED
-          - ABORTED
-          - SETTLED
+        description: Fulfilment of the condition specified with the transaction. Note - Either fulfilment or errorInformation should be set, not both.
+      errorInformation:
+        $ref: '#/definitions/ErrorInformation'
+        description: If transfer is REJECTED, error information may be provided. Note - Either fulfilment or errorInformation should be set, not both.
       extensionList:
-        $ref: '#/definitions/extensionList'
+        $ref: '#/definitions/ExtensionList'
+        description: Optional extension, specific to deployment.
     required:
-      - transferState
-  errorInformation:
+    - transferId
+  ErrorInformation:
     type: object
     description: Error information
     properties:
@@ -384,7 +378,7 @@ definitions:
         type: string
         pattern: '^[0-9]{4}'
       extensionList:
-        $ref: '#/definitions/extensionList'
+        $ref: '#/definitions/ExtensionList'
     required:
       - errorDescription
       - errorCode
@@ -392,10 +386,10 @@ definitions:
     type: object
     properties:
       errorInformation:
-        $ref: '#/definitions/errorInformation'
+        $ref: '#/definitions/ErrorInformation'
     required:
       - errorInformation
-  BulkTransfer:
+  BulkTransfersPostRequest:
     type: object
     properties:
       bulkTransferId:
@@ -419,7 +413,7 @@ definitions:
         minLength: 1
         maxLength: 32
       extensionList:
-        $ref: '#/definitions/extensionList'
+        $ref: '#/definitions/ExtensionList'
       expiration:
         type: string
         description: When the transfer expires
@@ -431,34 +425,31 @@ definitions:
         minItems: 1
         items:
           $ref: '#/definitions/IndividualTransfer'
-  BulkTransferFulfilment:
+    required:
+    - bulkTransferId
+    - bulkQuoteId
+    - payerFsp
+    - payeeFsp
+    - individualTransfers
+    - expiration
+  BulkTransfersIDPutResponse:
     type: object
     properties:
-      bulkQuoteId:
+      completedTimestamp:
         type: string
-        description: Id of bulk quote
-        x-format:
-          guid: true
-      payeeFsp:
-        type: string
-        description: Financial Service Provider of Payee
-        minLength: 1
-        maxLength: 32
-      payerFsp:
-        type: string
-        description: Financial Service Provider of Payer
-        minLength: 1
-        maxLength: 32
-      extensionList:
-        $ref: '#/definitions/extensionList'
-      expiration:
-        type: string
-        description: When the transfer expires
-        pattern: >-
-          ^(?:[1-9]\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)T(?:[01]\d|2[0-3]):[0-5]\d:[0-5]\d(?:(\.\d{3}))(?:Z|[+-][01]\d:[0-5]\d)$
-      individualTransfers:
+        description: Time and date when the bulk transaction was completed.
+      individualTransferResults:
         type: array
-        description: individual transfers list
         minItems: 1
+        maxItems: 1000
         items:
-          $ref: '#/definitions/TransferFulfilment'
+          $ref: '#/definitions/IndividualTransferResult'
+        description: List of IndividualTransferResult elements. 
+      bulkTransferState:
+        type: string
+        description: The state of the bulk transfer.
+      extensionList:
+        $ref: '#/definitions/ExtensionList'
+        description: Optional extension, specific to deployment.
+    required:
+    - bulkTransferState
